--- a/app/src/main/res/drawable/background_menu.xml
+++ b/app/src/main/res/drawable/background_menu.xml
@@ -4,7 +4,8 @@
     <solid android:color="@color/colorAccent"/>
     <stroke android:width="5dp"
         android:color="@color/colorSecondary" />
-    <padding android:left="5dp"
+    <padding
+        android:left="5dp"
         android:top="5dp"
         android:right="5dp"
         android:bottom="5dp"/>
