--- a/app/src/main/res/menu/country_list_menu.xml
+++ b/app/src/main/res/menu/country_list_menu.xml
@@ -1,3 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu style="@style/ArtistDetailsText">
+<menu style="@style/ArtistDetailsText"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <group
+        android:id="@+id/gCountries"
+        android:checkableBehavior="single">
+
+    </group>
 </menu>
