--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
 
     <!-- Progress view. -->
     <dimen name="progress_view_height">10dp</dimen>
+    <dimen name="sheet_text_scrim_height_top">?attr/actionBarSize</dimen>
+    <dimen name="sheet_text_scrim_height_bottom">88dp</dimen>
 </resources>
