--- a/app/src/main/res/layout/fragment_artists.xml
+++ b/app/src/main/res/layout/fragment_artists.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorAccent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/movieList"
+        android:id="@+id/artistList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="3dp"
